[package]
name    = "tcv"
version = "0.1.0"
edition = "2021"
author  = "Julio C. B. Gardona"
about   =  "A temperature unit conversor"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.27", features = ["derive"] }

[profile.release]
strip = true
opt-level = "z"
lto = true
panic = "abort"
